--- a/app/views/events/scoreboards/_speed_distance_time.html+mobile.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html+mobile.haml
@@ -1,4 +1,4 @@
-- cache ['mobile-scoreboard', I18n.locale, @scoreboard.event] do
+- cache ['mobile-scoreboard', I18n.locale, @scoreboard.event, display_event_params] do
   %table.event__scoreboard-table
     %thead
       %tr
