fix error on copy sponsors

--- a/app/views/sponsors/sponsors_copies/create.js.erb
+++ b/app/views/sponsors/sponsors_copies/create.js.erb
@@ -1,2 +1,6 @@
 $('#modal').modal('hide');
-$('#sponsors').html('<%= j render partial: 'sponsors/sponsor', collection: @sponsorable.sponsors %>');
+$('#sponsors').html(
+  '<%= j render partial: 'sponsors/sponsor',
+                collection: @sponsorable.sponsors,
+                locals: { editable: true } %>'
+);
