--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -13,7 +13,7 @@
 
   .hc-worst-result {
     color: rgb(213, 139, 138);
-  } 
+  }
 
   td.row-number {
     width: 20px;
@@ -25,6 +25,8 @@
   }
 
   td.result-cell {
+    text-align: right;
+
     span {
       position: absolute;
       height: 100%;
