--- a/app/views/tournaments/competitors/_table.html.haml
+++ b/app/views/tournaments/competitors/_table.html.haml
@@ -10,4 +10,4 @@
       %th
 
   %tbody
-    = render @competitors
+    = render collection: @competitors, partial: 'tournaments/competitors/competitor'
