--- a/app/views/tournaments/matches/_match.html.haml
+++ b/app/views/tournaments/matches/_match.html.haml
@@ -15,30 +15,30 @@
         %i.fa.fa-pencil
         = t('general.edit')
     .panel-body.competitors-container
-      - match.slots.each do |competitor|
+      - match.slots.each do |slot|
         .tournament-competitor.row
           .col-sm-9.text-left
             - if match.gold_finals? || match.bronze_finals?
-              - if competitor.earn_medal
-                %i.fa.fa-fw.fa-certificate{class: competitor.earn_medal}
+              - if slot.earn_medal
+                %i.fa.fa-fw.fa-certificate{class: slot.earn_medal}
               - else
                 %i.fa.fa-fw
-            %a{href: profile_path(competitor.tournament_competitor.profile_id)}
-              = competitor.tournament_competitor.name
+            %a{href: profile_path(slot.competitor.profile_id)}
+              = slot.competitor.name
           .col-sm-3.text-right
-            - if competitor.track_id
-              = link_to tournament_match_slot_path(@tournament, match, competitor), remote: true, data: {toggle: 'tooltip'}, title: competitor.notes do
-                - if competitor.is_disqualified
+            - if slot.track_id
+              = link_to tournament_match_slot_path(@tournament, match, slot), remote: true, data: {toggle: 'tooltip'}, title: slot.notes do
+                - if slot.is_disqualified
                   %s
-                    = competitor.result
+                    = slot.result
                 - else
-                  = competitor.result
+                  = slot.result
             - else
-              - if competitor.is_disqualified
+              - if slot.is_disqualified
                 %s
-                  = competitor.result
+                  = slot.result
               - else
-                = competitor.result
+                = slot.result
 
       - match.free_slots.times do
         .tournament-competitor.row
