--- a/app/views/organizers/_organizer.html.haml
+++ b/app/views/organizers/_organizer.html.haml
@@ -1,7 +1,7 @@
 %li.organizers__item{id: dom_id(organizer)}
   %span= organizer.name
   - if policy(organizer.organizable).update? && !organizer.organizable.finished?
-    = button_to event_organizer_path(organizer.organizable, organizer),
+    = button_to polymorphic_path([organizer.organizable, organizer]),
                 method: :delete,
                 remote: true,
                 class: 'delete-organizer btn-link' do
