crud for matches and slots

--- a/app/assets/stylesheets/blocks/_button_tabs.scss
+++ b/app/assets/stylesheets/blocks/_button_tabs.scss
@@ -18,6 +18,10 @@
     padding: 6px;
   }
 
+  &.btn-xs {
+    padding: 0 12px;
+  }
+
   &:hover {
     color: rgb(17, 17, 17);
     background-color: #f2f2f2;
