--- a/app/views/tournaments/matches/_match.html.haml
+++ b/app/views/tournaments/matches/_match.html.haml
@@ -1,7 +1,10 @@
+- editable = policy(@tournament).update?
 - spacers ||= 0
+
 - unless match.bronze_finals?
   - spacers.times do
     .tournament-spacer
+
 .tournament-match.text-right
   .panel.panel-default
     = link_to tournament_match_map_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
@@ -10,40 +13,53 @@
     = link_to tournament_match_globe_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
       %i.fa.fa-compass
       3D map
-    - if policy(@tournament).update?
+    - if editable
       = link_to edit_tournament_match_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
         %i.fa.fa-pencil
         = t('general.edit')
     .panel-body.competitors-container
       - match.slots.each do |slot|
         .tournament-competitor.row
-          .col-sm-9.text-left
-            - if match.gold_finals? || match.bronze_finals?
-              - if slot.earn_medal
-                %i.fa.fa-fw.fa-certificate{class: slot.earn_medal}
-              - else
-                %i.fa.fa-fw
-            %a{href: profile_path(slot.competitor.profile_id)}
-              = slot.competitor.name
-          .col-sm-3.text-right
-            - if slot.track_id
-              = link_to tournament_match_slot_path(@tournament, match, slot), remote: true, data: {toggle: 'tooltip'}, title: slot.notes do
-                - if slot.is_disqualified
-                  %s
-                    = slot.result
+          - if slot.competitor.present?
+            .col-sm-9.text-left
+              - if match.gold_finals? || match.bronze_finals?
+                - if slot.earn_medal
+                  %i.fa.fa-fw.fa-certificate{class: slot.earn_medal}
                 - else
-                  = slot.result
-            - else
+                  %i.fa.fa-fw
+              %a{href: profile_path(slot.competitor.profile_id)}
+                = slot.competitor.name
+          - else
+            .col-sm-9.text-left.text-muted ?
+
+          .col-sm-3.text-right
+            - has_result = slot.result.present? || slot.track.present?
+
+            - result_html = capture do
               - if slot.is_disqualified
                 %s
                   = slot.result
               - else
                 = slot.result
 
+            - if editable
+              - if has_result
+                = link_to tournament_match_slot_result_path(@tournament, match, slot), remote: true, 'data-toggle': 'tooltip', title: slot.notes do
+                  = result_html
+              - else
+                = link_to new_tournament_match_slot_result_path(@tournament, match, slot), remote: true, class: 'btn-flat btn-xs' do
+                  %i.fa.fa-fw.fa-upload.text-muted
+
+            - else
+              - if slot.track_id
+                = link_to tournament_match_slot_path(@tournament, match, slot), remote: true, data: {toggle: 'tooltip'}, title: slot.notes do
+                  = result_html
+              - else
+                = result_html
+
       - match.free_slots.times do
         .tournament-competitor.row
-          .col-sm-9.text-left.text-muted
-            ?
+          .col-sm-9.text-left.text-muted ?
           .col-sm-3.text-right
 - unless match.gold_finals? || match.bronze_finals?
   - spacers.times do
