--- a/app/views/tracks/form/_visibility.html.haml
+++ b/app/views/tracks/form/_visibility.html.haml
@@ -5,12 +5,9 @@
     %span.col-sm-3.control-label
       = t('tracks.edit.visibility')
     .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-      %label.btn.btn-default{ class:  ('active' if visibility == 'public_track') }
-        = form.radio_button 'visibility', 'public_track'
-        = t('visibility.public')
-      %label.btn.btn-default{ class:  ('active' if visibility == 'unlisted_track') }
-        = form.radio_button 'visibility', 'unlisted_track'
-        = t('visibility.unlisted')
-      %label.btn.btn-default{ class:  ('active' if visibility == 'private_track') }
-        = form.radio_button 'visibility', 'private_track'
-        = t('visibility.private')
+      - %w[public unlisted private].each do |visibility_name|
+        - current_value = "#{visibility_name}_track"
+        - active = visibility == current_value
+        %label.btn.btn-default{ class:  ('active' if active) }
+          = form.radio_button 'visibility', current_value, checked: active
+          = t("visibility.#{visibility_name}")
