Edit jump range for tournament heat jump #110

--- a/app/views/tournaments/matches/slots/results/_show_modal.html.haml
+++ b/app/views/tournaments/matches/slots/results/_show_modal.html.haml
@@ -14,6 +14,7 @@
 
     .modal-body
       .container-fluid
+        = render 'tournaments/matches/slots/header'
         .row
           .col-sm-12
             .pull-right
