unify mobile and desktop event scoreboards

--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -15,6 +15,7 @@
 @import '../variables';
 @import '../common/**/*';
 @import '../blocks/**/*';
+@import '../events/**/*';
 
 @import 'variables';
 @import '**/*';
