--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,7 +1,7 @@
 - provide :title, @event.name
 - can_manage = policy(@event).update?
 
-.container.top-buffer#event
+.container-fluid.top-buffer#event
 
   .content-block
     .row
