--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -1,18 +1,15 @@
-- can_update = policy(@scoreboard.event).update? && !@scoreboard.event.finished?
+- can_update = policy(@scoreboard.event).update? && !@scoreboard.event.finished? && !request.variant.include?(:mobile)
 - cache ['scoreboard', I18n.locale, @scoreboard.event, display_event_params, can_update] do
-  %table.table.table-bordered#results-table
+  %table.event__scoreboard-table#results-table
     %thead
-      %tr#disciplines-row
-        %td{rowspan: 3}
-          \#
-        %td{rowspan: 3, colspan: 2}
-          = t('activerecord.models.competitor')
+      %tr
+        %td.text-center{rowspan: 3} #
+        %td{rowspan: 3, colspan: 3}= t('activerecord.models.competitor')
         - @scoreboard.rounds_by_discipline.each do |discipline, rounds|
-          %td.text-center{colspan: (rounds.count * 2 + 1)}
-            = t('disciplines.' + discipline)
-        %td.text-center{rowspan: 3}
-          = t('events.show.total')
-      %tr#rounds-row
+          %td.text-center{colspan: (rounds.count * 2 + 1)}= t('disciplines.' + discipline)
+        %td.text-center{rowspan: 3}= t('events.show.total')
+
+      %tr
         - @scoreboard.rounds_by_discipline.each do |discipline, rounds|
           - rounds.each do |round|
             %td.round-cell{colspan: 2}
@@ -20,15 +17,15 @@
                 = round.number
                 .round-cell__actions.dropdown
                   %button.btn-link{'data-toggle': 'dropdown'}
-                    %i.fa.fa-ellipsis-v
+                    %i.fa.fa-ellipsis-v.text-muted
                   %ul.dropdown-menu.dropdown-menu-right
                     %li
                       = link_to event_round_map_path(@event, round), remote: true, class: 'round-map-view', rel: 'nofollow' do
-                        %i.fa.fa-compass
+                        %i.fa.fa-compass.text-muted
                         Google maps
                     %li
                       = link_to event_round_globe_path(@event, round), remote: true, class: 'round-map-view', rel: 'nofollow' do
-                        %i.fa.fa-compass
+                        %i.fa.fa-compass.text-muted
                         3D maps
                     - if can_update
                       %li.divider
@@ -39,15 +36,13 @@
                                     class: 'btn-link' do
                           %i.fa.fa-times.text-muted
                           = t('general.delete')
-          %td.text-center{rowspan: 2, 'data-discipline' => discipline, 'data-role' => 'points'}
-            = '%'
-      %tr#units-row
+          %td.text-center{rowspan: 2, 'data-discipline' => discipline, 'data-role' => 'points'} %
+
+      %tr.text-center
         - @scoreboard.rounds_by_discipline.each do |discipline, rounds|
           - rounds.each do |round|
-            %td.text-center
-              = t('units.' + discipline_unit(discipline.to_sym).to_s)
-            %td.text-center
-              = '%'
+            %td= t('units.' + discipline_unit(discipline.to_sym).to_s)
+            %td %
 
     - @scoreboard.sections.each do |section|
       %tbody
@@ -57,8 +52,8 @@
                  editable: can_update
 
         - section.competitors.each_with_index do |competitor, index|
-          %tr.competitor-row{id: dom_id(competitor)}
-            %td.row-number= index + 1
+          %tr.event__scoreboard-competitor{id: dom_id(competitor)}
+            %td.text-center= index + 1
 
             = render 'events/competitors/competitor_cells',
                      competitor: competitor,
@@ -72,17 +67,17 @@
                            { event: @scoreboard.event,
                              result: result,
                              can_update: can_update,
-                             result_class: ('hc-best-result' if result.best_in_round_and_category?) }
+                             result_class: ('text-green' if result.best_in_round_and_category?) }
 
-                  %td.points-cell.text-right
+                  %td.text-right
                     - if result.penalized?
                       %span.dotted-underline{'data-toggle': 'tooltip', title: result.penalty_reason}
                         = result.formated_points
                     - else
                       = result.formated_points
                 - elsif can_update
-                  %td.text-center.create-result-cell
-                    = new_event_track_link(@scoreboard.event, competitor, round)
+                  %td.event__scoreboard-result.text-center
+                    %span= new_event_track_link(@scoreboard.event, competitor, round)
                   %td
 
                 - else
@@ -93,6 +88,7 @@
                 - points_in_discipline = competitor.points_in_discipline(discipline)
                 - if points_in_discipline&.positive?
                   = points_in_discipline.round(1)
-            %td.text-right
+
+            %td.event__scoreboard-result.text-right
               - if competitor.total_points.positive?
                 = '%.2f' % competitor.total_points
