--- a/app/views/events/sections/_edit_section_controls.html.haml
+++ b/app/views/events/sections/_edit_section_controls.html.haml
@@ -1,7 +1,7 @@
 = edit_section_link(@event, section)
 
 - if @event.sections.many?
-  %span.pipe-edit-section.text-muted
+  %span.section__control
     |
 
   - unless section.first_position?
@@ -9,7 +9,7 @@
   - unless section.last_position?
     = move_section_lower_button(@event, section)
 
-  %span.pipe-edit-section.text-muted
+  %span.section__control
     |
 
 = delete_section_button(@event, section)
