--- a/app/views/events/sections/_section_row.html.haml
+++ b/app/views/events/sections/_section_row.html.haml
@@ -1,7 +1,6 @@
-%tr.head-row{id: dom_id(section)} 
-  %td.section-cell{colspan: columns_count}
-    %span
-      = section.name + ':'
+%tr{id: dom_id(section)}
+  %td.event__scoreboard-section{colspan: columns_count}
+    %span.section__name= section.name
 
     - if editable
       = render 'events/sections/edit_section_controls', event: @event, section: section
