make tests pass

--- a/app/assets/stylesheets/events/_scoreboard.scss
+++ b/app/assets/stylesheets/events/_scoreboard.scss
@@ -138,3 +138,8 @@ td.event__scoreboard-result {
     }
   }
 }
+
+td.event__scoreboard-total-result {
+  text-align: right;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
