lower font size for competition scoreboard

--- a/app/assets/stylesheets/events/_scoreboard.scss
+++ b/app/assets/stylesheets/events/_scoreboard.scss
@@ -24,8 +24,8 @@
 
   td {
     white-space: nowrap;
-    font: 13px/13px "Proxima Nova Regular";
-    padding: 8px 10px;
+    font: 12px/12px "Proxima Nova Regular";
+    padding: 8px;
     border: 1px solid #eee;
     vertical-align: middle;
 
