fix competitors table position in round map

--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -12,6 +12,7 @@
 
       = render 'events/maps/legend'
 
+    .col-sm-4
       .round-competitors__list-commands
         %button.btn.btn-xs.btn-default{'data-action': 'click->events--round-map#select_all'}
           = t('general.select_all')
